# freqandsee

./: .gitignore  README.md  pyproject.toml
demo_notebooks/: allan_variance_white_noise_demo.ipynb  basic_demo.ipynb  filtering_demo.ipynb  import_export_demo.ipynb
src/freqandsee/: freqandsee.py  project_logger.py
