[tool.poetry]
name = "freqandsee"
version = "0.1.0"
description = ""
authors = ["Matthieu Liger <matthieu.liger@gmail.com>"]
readme = "README.md"
packages = [{include = "freqandsee", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pretty-logger = {git = "https://github.com/matthieuliger/pretty_logger.git"}
numpy = "^2.1.3"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
humanize = "^4.9.0"
pandas-stubs = "^2.2.0.240218"
scipy = "^1.12.0"
astropy = "^6.0.0"
sphinx-astropy = "^1.9.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
isort = "^5.13.2"
ipykernel = "^6.29.4"
coverage = "^7.4.4"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "^(tests|deprecated)/"
